# BLT-API

./: .env.sample  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  wrangler.toml
.github/workflows/: tests.yml
migrations/: 0005_encrypt_user_sensitive_fields.sql  0006_drop_plaintext_user_columns.sql  0007_encrypt_username.sql  0008_signup_ip_ua.sql  0009_username_nullable.sql
scripts/: create_user.sh  load_env_production.sh
src/: client.py  main.py  router.py  utils.py
src/handlers/: __init__.py  auth.py  bugs.py  health.py  homepage.py  organizations.py  routes.py  stats.py  users.py
src/libs/: data_protection.py  db.py  orm.py
src/pages/: index.html
src/services/: email_service.py  email_templates.py
src/services/templates/: README.md  base.html  bug_confirmation.html  password_reset.html  verification.html  welcome.html
tests/: conftest.py  test_bugs.py  test_router.py
